# coding-katas

./: README.md  pyproject.toml
coding_katas/: fizz_buzz.py  pizza.py  shape.py
tests/: test_fizz_buzz.py  test_pizza.py  test_shape.py
